fixed image slider overflow

--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ body{
 }
 @media(max-width:845px){
     body .image-slider div{
-        padding-top: 30px;
+        padding-top: 10px;
     }
     body .image-slider div img{
         height: 35px;
